// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Background Overlay Active overlay 1`] = `
<div>
  <a
    class="sc-kjoXOD cVySlm sc-chPdSV lbFFQV"
    color="blue"
  />
</div>
`;

exports[`Background Overlay Inactive overlay 1`] = `
<div>
  <a
    class="sc-kjoXOD jJwiOY sc-chPdSV lbFFQV"
    color="blue"
  />
</div>
`;
